# Code-Academy

./: 20210108_2  izchistiBit.c  test.c  Важни моменти в писането на C.docx
10. Pointers and Arrays/: 20210203_1.c  20210203_1a.c  20210203_2.c  20210203_3.c  20210203_4.c  20210203_5.c  20210203_7.c  20210203_8.c
11.Arrays/: 20210205_1.c  20210205_10.c  20210205_2.c  20210205_3.c  20210205_4.c  20210205_5.c  20210205_6.c  20210205_7.c  20210205_8.c  20210205_9.c  test.c  test1.c  test2.c
14. Arrays/: 20210205_15.c  20210205_16.c  20210205_17.c  20210205_18.c  20210208_1.c  20210208_2.c  20210208_3.c  20210208_4.c  20210208_5.c  20210208_6.c  20210208_7.c
14.Masivi/: 20210205_19.c  20210205_20.c  20210205_21.c
15. Memory allocation/: 20210210_3.c  20210210_8.c
15.Zadelqne_na_pamet/: 20210210_1.c  20210210_2.c  20210210_4.c  20210210_5.c  20210210_5a.c  20210210_6.c  20210210_7.c  alloc.c  malloc.c  test.c
16. Memory allocation/: 20210212_1.c  20210212_13.c  20210212_4.c  20210212_5.c  20210212_6.c  20210212_7.c
16.Zadelqne_na_pamet_13.02/: 20210212_11.c  20210212_12.c  (+5 more)
Biggest Work - 3 Different Games Project/CounterStrike/: CMakeLists.txt  README.md
Biggest Work - 3 Different Games Project/CounterStrike/include/: BattleField.h  Defines.h  Pistol.h  Player.h
Biggest Work - 3 Different Games Project/CounterStrike/src/: BattleField.c  Pistols.c  Player.c  main.c
Strypes project/Starcraft_Skeleton/: CMakeLists.txt
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/: CMake_Task_Description.odt
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/demos/ListingSources/: .cproject  .project  CMakeLists.txt  bazinga.c  main.c  someOtherFile.c  yetAnotherFile.c
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/demos/ListingSources/internal_project/: CMakeLists.txt  main.c
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/megaAwesomeTask/: .project
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/megaAwesomeTask/include/: 01_whatIsLove.h  02_babyDontHurtMe.h  03_dontHurtMe.h  04_noMore.h
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/megaAwesomeTask/src/: 01_whatIsLove.c  02_babyDontHurtMe.c  03_dontHurtMe.c  04_noMore.c  CMakeLists.txt  main.c
Strypes project/Starcraft_Skeleton/CMake_Homework_Task/normalTask/: .cproject  .project  CMakeLists.txt  hello.c  hello.h  main.c
Strypes project/Starcraft_Skeleton/src/: BattleField.c  BattleField.h  Defines.h  Vector.c  a.out  main.c
(+350 files in other folders)
